--- a/app/src/main/res/layout/activity_event_attendees.xml
+++ b/app/src/main/res/layout/activity_event_attendees.xml
@@ -6,13 +6,13 @@
     android:layout_height="wrap_content"
     tools:context=".EventAttendees">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/eventAttendeeToolbar"
         android:background="?android:attr/windowBackground"/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/eventAttendeeRecyclerView"
