--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -7,7 +7,7 @@
     tools:context=".Fragment.Event_fragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/eventPostRecyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
